--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>더케이호텔</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image">
     <!--외부 css연결-->
-    <link rel="stylesheet" href="CSS/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css" type="text/css">
 </head>
 <body>
    <div class="wrap">
